# strong-exchange-bot

./: .gitignore  Dockerfile  README.md  compose.debug.yml  compose.yml  dev.env  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
containers/: nginx_server.conf
currency_bot/: manage.py
currency_bot/currency/: admin.py  draw.py  helpers.py  logic.py  models.py  tests.py
currency_bot/currency/migrations/: 0001_initial.py  0002_auto_20200228_1047.py  0002_auto_20200301_1429.py
currency_bot/currency_bot/: asgi.py  urls.py  wsgi.py
currency_bot/currency_bot/settings/: base.py  container.py  dev.py
currency_bot/telegram_bot/: chat.py  models.py  tests.py  urls.py  views.py  wrapper.py
currency_bot/telegram_bot/migrations/: 0001_initial.py
strong_exchange_bot/: manage.py
strong_exchange_bot/currency/: models.py
strong_exchange_bot/strong_exchange_bot/: asgi.py  settings.py  urls.py  wsgi.py
strong_exchange_bot/strong_exchange_bot/settings/: base.py
strong_exchange_bot/telegram_bot/: admin.py  chat.py  models.py  views.py
strong_exchange_bot/telegram_bot/management/commands/: set_telegram_webhook.py
strong_exchange_bot/telegram_bot/migrations/: 0001_initial.py
